# pinsearch

./: .env.example  .gitignore  README.md  logger.py  main.py  pyproject.toml  settings.py  utils.py
cron/: datafile_scraper.py  update_pincode_data.py
schema/: response_schemas.py
static/: sdk-docs.md  site.webmanifest
static/javaScripts/: base_script.js  sdk_docks.js
templates/: 404.html  base.html
templates/pages/: api.html  home.html  sdk.html
templates/partials/: footer.html  header.html
