[project]
name = "pincode-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "ddddocr>=1.6.1",
    "fastapi[standard]>=0.136.3",
    "pinsearch-sdk>=0.1.3",
    "requests>=2.34.2",
    "selenium>=4.44.0",
]
